[gd_scene load_steps=5 format=3 uid="uid://bjwyqp8bw74nx"]

[ext_resource type="Texture2D" uid="uid://dqdpwkgcjg7u8" path="res://assets/images/nodes/question_mark_node.png" id="1_e6gyp"]
[ext_resource type="Script" path="res://scenes/game_objects/world/world_node/world_node.gd" id="1_grnsk"]
[ext_resource type="Texture2D" uid="uid://dsctmiux3yqib" path="res://scenes/player/tile_0112.png" id="3_2fyg1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jgbhb"]
radius = 32.0

[node name="WorldNode" type="Node2D"]
script = ExtResource("1_grnsk")

[node name="worldNodeSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_e6gyp")

[node name="PlayerSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_2fyg1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jgbhb")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
